src/photo.h

    // see : https://docs.opencv.org/3.4/d7/dd6/classcv_1_1MergeMertens.html
    typedef cv::Ptr<cv::MergeMertens> *MergeMertens;
    // see : https://docs.opencv.org/master/d7/db6/classcv_1_1AlignMTB.html
    typedef cv::Ptr<cv::AlignMTB> *AlignMTB;
typedef void *MergeMertens;
typedef void *AlignMTB;
    void SeamlessClone(Mat src, Mat dst, Mat mask, Point p, Mat blend, int flags);
    void TextureFlattening(Mat src, Mat mask, Mat dst, float low_threshold, float high_threshold, int kernel_size);
    void MergeMertens_Close(MergeMertens b);
    void AlignMTB_Close(AlignMTB b);
    void Stylization(Mat src, Mat dst, float sigma_s, float sigma_r);
    void PhotoInpaint(Mat src, Mat mask, Mat dst, float inpaint_radius, int algorithm_type);