packages/dartcv/lib/src/g/photo.g.dart


  late final _PencilSketch_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Float, ffi.Float, ffi.Float,
              imp1.CvCallback_2)>>('PencilSketch_Async');
  late final _PencilSketch_Async = _PencilSketch_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, double, double, double, imp1.CvCallback_2)>();

  ffi.Pointer<CvStatus> PhotoInpaint(
    Mat src,
    Mat mask,
    Mat dst,
    double inpaint_radius,
    int algorithm_type,
  ) {
    return _PhotoInpaint(
      src,
      mask,
      dst,
      inpaint_radius,
      algorithm_type,
    );
  }

  late final _PhotoInpaintPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Float, ffi.Int)>>('PhotoInpaint');
  late final _PhotoInpaint = _PhotoInpaintPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, double, int)>();

  ffi.Pointer<CvStatus> PhotoInpaint_Async(
    Mat src,
    Mat mask,
    double inpaint_radius,
    int algorithm_type,
    imp1.CvCallback_1 callback,
  ) {
    return _PhotoInpaint_Async(
      src,
      mask,
      inpaint_radius,
      algorithm_type,
      callback,
    );
  }

  late final _PhotoInpaint_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Float, ffi.Int,
              imp1.CvCallback_1)>>('PhotoInpaint_Async');
  late final _PhotoInpaint_Async = _PhotoInpaint_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, double, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> SeamlessClone(
    Mat src,
    Mat dst,
    Mat mask,
    CvPoint p,
    Mat blend,
    int flags,
  ) {
    return _SeamlessClone(
      src,
      dst,
      mask,
      p,
      blend,
      flags,
    );
  }

  late final _SeamlessClonePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, CvPoint, Mat, ffi.Int)>>('SeamlessClone');
  late final _SeamlessClone = _SeamlessClonePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, CvPoint, Mat, int)>();

  ffi.Pointer<CvStatus> SeamlessClone_Async(
    Mat src,
    Mat dst,
    Mat mask,
    CvPoint p,
    int flags,
    imp1.CvCallback_1 callback,
  ) {
    return _SeamlessClone_Async(
      src,
      dst,
      mask,
      p,
      flags,
      callback,
    );
  }

  late final _SeamlessClone_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, CvPoint, ffi.Int,
              imp1.CvCallback_1)>>('SeamlessClone_Async');
  late final _SeamlessClone_Async = _SeamlessClone_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, Mat, CvPoint, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Stylization(
    Mat src,
    Mat dst,
    double sigma_s,
    double sigma_r,
  ) {
    return _Stylization(
      src,
      dst,
      sigma_s,
      sigma_r,
    );
  }

  late final _StylizationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Float, ffi.Float)>>('Stylization');
  late final _Stylization = _StylizationPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, double, double)>();

  ffi.Pointer<CvStatus> Stylization_Async(
    Mat src,
    double sigma_s,
    double sigma_r,
    imp1.CvCallback_1 callback,
  ) {
    return _Stylization_Async(
      src,
      sigma_s,
      sigma_r,
      callback,
    );
  }

  late final _Stylization_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Float, ffi.Float,
              imp1.CvCallback_1)>>('Stylization_Async');
  late final _Stylization_Async = _Stylization_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> TextureFlattening(
    Mat src,
    Mat mask,
    Mat dst,
    double low_threshold,
    double high_threshold,
    int kernel_size,
  ) {
    return _TextureFlattening(
      src,
      mask,
      dst,
      low_threshold,
      high_threshold,
      kernel_size,
    );
  }

  late final _TextureFlatteningPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Float, ffi.Float,
              ffi.Int)>>('TextureFlattening');
  late final _TextureFlattening = _TextureFlatteningPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, double, double, int)>();

  ffi.Pointer<CvStatus> TextureFlattening_Async(
    Mat src,
    Mat mask,
    double low_threshold,
    double high_threshold,
    int kernel_size,
    imp1.CvCallback_1 callback,
  ) {
    return _TextureFlattening_Async(
      src,
      mask,
      low_threshold,
      high_threshold,
      kernel_size,
      callback,
    );
  }

  late final _TextureFlattening_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Float, ffi.Float,
              ffi.Int, imp1.CvCallback_1)>>('TextureFlattening_Async');
  late final _TextureFlattening_Async = _TextureFlattening_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, double, double, int, imp1.CvCallback_1)>();

  late final addresses = _SymbolAddresses(this);
}

class _SymbolAddresses {
  final CvNativePhoto _library;
  _SymbolAddresses(this._library);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(AlignMTBPtr)>>
      get AlignMTB_Close => _library._AlignMTB_ClosePtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(MergeMertensPtr)>>
      get MergeMertens_Close => _library._MergeMertens_ClosePtr;
}

final class AlignMTB extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef AlignMTBPtr = ffi.Pointer<AlignMTB>;
typedef CvPoint = imp1.CvPoint;
typedef CvStatus = imp1.CvStatus;
typedef Mat = imp1.Mat;

final class MergeMertens extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef MergeMertensPtr = ffi.Pointer<MergeMertens>;
typedef VecMat = imp1.VecMat;
